crates/solidity-v2/testing/snapshots/diagnostics_output/structure/free_function_payable/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9559] Error: Free functions cannot be payable.
   ╭─[input.sol:5:1]
   │
 5 │ function pay() payable {}
   │ ────────────┬────────────  
   │             ╰────────────── Error occurred here.
───╯
